<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shubhra.edittask.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:text="@string/etTitle"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/etDate"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/etTime"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvPriority"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvTaskNumber"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="116dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

    <ImageButton
        android:id="@+id/buttonEdit"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskNumber"
        app:srcCompat="@drawable/edit" />

    <ImageButton
        android:id="@+id/buttondelete"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="136dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskNumber"
        app:srcCompat="@drawable/delete" />

    <ImageButton
        android:id="@+id/buttonright"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskNumber"
        app:srcCompat="@drawable/sort_r" />

    <ImageButton
        android:id="@+id/buttonLeft"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonPrevious"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTaskNumber"
        app:srcCompat="@drawable/sort_l" />

    <ImageButton
        android:id="@+id/buttonFirst"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonLeft"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/buttonLast"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonLast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonright"
        app:srcCompat="@drawable/right" />

    <ImageButton
        android:id="@+id/buttonAdd"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/buttonAdd"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add" />

</android.support.constraint.ConstraintLayout>
